<resources>
    <string name="app_name">BTACOIN</string>
    <string name="packageName">com.example.myapplication</string>
    <string name="kkk">如果</string>
    <string name="home_pager">首页</string>
    <string name="tab_fbz">发布中</string>
    <string name="heyue">合约</string>
    <string name="hangqing">行情</string>
    <string name="mine">我的</string>
    <string name="text_mr">买入</string>
    <string name="text_mc">卖出</string>
    <string name="tab_zhibiao" translatable="false">指标  </string>
    <string name="tab_fenshi">分时  </string>
    <string name="tab_yifenzhong">1分钟</string>
    <string name="tab_wufenzhong">5分钟</string>
    <string name="tab_sanshifenzhong">30分钟</string>
    <string name="tab_yixiaoshi">1小时</string>
    <string name="tab_yizhou" translatable="false">1周  </string>
    <string name="tab_yitian">1天  </string>
    <string name="tab_yiyue">1月  </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noquanxian">未获取到权限</string>
    <string name="again_out">再按一次退出</string>
    <string name="topup">充币</string>
    <string name="tibi">提币</string>
    <string name="mymoney">我的资产</string>
    <string name="address">提币地址</string>
    <string name="address1">地址</string>
    <string name="mybill">账单</string>
    <string name="recommend">推荐返佣</string>
    <string name="notice">平台公告</string>
    <string name="yijian">意见工单</string>
    <string name="aboutas">关于我们</string>
    <string name="user_name">用户昵称</string>
    <string name="settings">设置</string>
    <string name="shiming">实名认证</string>
    <string name="yirenzheng">已认证</string>
    <string name="phonerenzheng">手机认证</string>
    <string name="update">修改</string>
    <string name="email_renzheng">邮箱认证</string>
    <string name="login_password">登录密码</string>
    <string name="shoop_password">交易密码</string>
    <string name="login_out">安全退出</string>
    <string name="safe_seetings">安全设置</string>
    <string name="name_yaoqiu"><![CDATA[请设置2-24个字符，不包括@<>/等无效字符]]></string>
    <string name="do_fwanchneg">完成</string>
    <string name="update_name">修改昵称</string>
    <string name="card_type">认证证件类型</string>
    <string name="choose_cardtype">请选择证件类型</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入真实姓名</string>
    <string name="card_number">证件号码</string>
    <string name="input_cardnumber">请输入实名认证证件号</string>
    <string name="next_do">下一步</string>
    <string name="old_psd">旧密码</string>
    <string name="input_old_psd">请输入旧密码</string>
    <string name="new_psd">新密码</string>
    <string name="input_new_psw">请设置新密码</string>
    <string name="login_agin_psd">确认新密码</string>
    <string name="input_psd_again">请再次确认密码</string>
    <string name="chongzhi">重置</string>
    <string name="nomodle">暂无数据~</string>
    <string name="addadress">添加地址</string>
    <string name="bi_type">币种</string>
    <string name="choose_bi">请选择币种</string>
    <string name="input_address">请输入地址</string>
    <string name="beizhu">备注</string>
    <string name="input_beizhu">请输入备注</string>
    <string name="add">添加</string>
    <string name="old_shoppwd">原交易密码</string>
    <string name="input_oldshoppwd">请输入原交易密码</string>
    <string name="input_new_shoppwd">请输入8–16位新交易密码</string>
    <string name="input_shoppwd_again">请再次输入8–16位新交易密码</string>
    <string name="update_shoppwd">修改交易密码</string>
    <string name="tel_phone">手机号码</string>
    <string name="input_telphone">请输入手机号码</string>
    <string name="code">验证码</string>
    <string name="input_phone_code">请输入手机验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="password">密码</string>
    <string name="input_loginpwd">请输入登录密码</string>
    <string name="ok">确定</string>
    <string name="email_address">邮箱地址</string>
    <string name="inupt_emailaddress">请输入邮箱地址</string>
    <string name="email_code">邮箱验证码</string>
    <string name="input_email_code">请输入邮箱验证码</string>
    <string name="please_choose">请选择</string>
    <string name="zcgz">资产估值</string>
    <string name="bb_zzc">币币账户总资产</string>
    <string name="search_bitype">搜索币种</string>
    <string name="gone_xxbz">隐藏小额币种</string>
    <string name="zonge">总额</string>
    <string name="keyong">可用</string>
    <string name="copy">复制</string>
    <string name="chongbi_hint">充币提醒</string>
    <string name="chongbi_hi">1. 该地址仅接受-，请勿往该地址转入非-资产，包括其相关联资产，否则您的资产将无法找回。\n 2. 最小充值金额：=-,小于该金额的充值将无法上账且无法退回。\n 3. 您充值至上述地址后，需要整个网络节点的确认，1次网络确认后到账，6次后方可提币，我们将以短信形式通知您到账情况。</string>
    <string name="zhuanchu_size">转出数量</string>
    <string name="input_tibi_size">请输入您的提币数量</string>
    <string name="ketong">可用：</string>
    <string name="dongjie">冻结:</string>
    <string name="zuixiaotixian">最小提现:</string>
    <string name="shouxufei">手续费</string>
    <string name="note_pws">短信密码</string>
    <string name="input_notepwd">请输入短信密码</string>
    <string name="get_note">获取短信密码</string>
    <string name="caozuo_hint">操作提醒</string>
    <string name="tibi_info">1.单笔转出最小币数=-，淡入转出最大币数>- \n2.禁止向（-）地主充值除（-）之外的资产，任何充入（-）地址的非（-）资产将不可找回。</string>
    <string name="add_money">充值</string>
    <string name="yinsizhence">隐私政策</string>
    <string name="yhtk">用户条款</string>
    <string name="version">版本</string>
    <string name="xinwen_notice">新闻公告</string>
    <string name="notice_info">公告详情</string>
    <string name="mine_bill">我的账单</string>
    <string name="yesterday_ustd">昨日提成(USDT)</string>
    <string name="alltic_usdt">总提成(USDT)</string>
    <string name="all_shuxu">总手续费(USDT)</string>
    <string name="team_allsize">团队总人数</string>
    <string name="my_tuiguang">我的推广</string>
    <string name="yaoqing">邀请好友</string>
    <string name="zixun">新闻资讯</string>
    <string name="text_cje">成交量</string>
    <string name="text_ssjg">价格</string>
    <string name="text_zdf">涨幅跌</string>
    <string name="kefu">在线客服</string>
    <string name="helpcenter">帮助中心</string>
    <string name="btacionheyue">BTACOIN合约</string>
    <string name="welcome_login">欢迎登录</string>
    <string name="input_pws">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="phone_register">手机注册</string>
    <string name="settings_pws">设置密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="yaoqing_code">邀请码（非必填）</string>
    <string name="forget_pwd1">忘记密码</string>
    <string name="text_kcjg">开仓价格</string>
    <string name="text_bj">本金</string>
    <string name="text_sx">手续费</string>
    <string name="text_yk">盈亏</string>
    <string name="text_pcj">平仓价</string>
    <string name="text_pclx">平仓类型</string>
    <string name="history_order">历史订单</string>
    <string name="syl">收益率</string>
    <string name="maidie">买跌</string>
    <string name="now_jiage">当前价格</string>
    <string name="zq_hint">轻松上手，全心交易！</string>
    <string name="now_update">即刻升级</string>
    <string name="zhiyng">止盈线（%）</string>
    <string name="zhishunx">止损线（%）</string>
    <string name="canle">取消</string>
    <string name="fscg">验证码发送成功</string>
    <string name="empty_hint">请填写完整信息</string>
    <string name="pwd_not">两次密码输入不一致</string>
    <string name="togyi">我已阅读并同意</string>
    <string name="agree_xieyi">请先阅读并同意协议</string>
    <string name="qsrdhhm">请输入电话号码</string>

    <string name="qsrxdmz">请输入新的名字</string>
    <string name="qsrsjyzm">请输入手机验证码</string>
    <string name="hqyzm">获取验证码</string>
    <string name="qsrdlmm">请输入登录密码</string>
    <string name="zcsrdlmm">再次输入登录密码</string>
    <string name="qsryqmbt">请输入邀请码(必填)</string>
    <string name="qjxxtxwz">请将信息填写完整</string>
    <string name="update_sussec">修改成功</string>
    <string name="hint_qsrhzsl">请输入划转数量</string>
    <string name="all">全部</string>
    <string name="pulib_user">普通账户</string>
    <string name="hzd">划转到</string>
    <string name="heyue_user">合约账户</string>
    <string name="submit">提交</string>
    <string name="huahzuan">划转</string>
    <string name="qsuzjxm">请输入您的证件姓名</string>
    <string name="qsuzjh">请输入您的证件号</string>
    <string name="choose_idcard">请选择您的证件类型</string>
    <string name="zmcg">证明成功</string>
    <string name="hint_tibisu">提现申请提交成功</string>
    <string name="jiangli">奖励</string>
    <string name="invitation">推荐</string>
    <string name="email">邮箱</string>
    <string name="zjyqkh">直接邀请用户</string>
    <string name="ecyqkh">二级推荐用户</string>
    <string name="yqtj">邀请推荐</string>
    <string name="zwtjrz">暂未提交认证</string>
    <string name="yaoqinghaoyou">邀请好友</string>
    <string name="youcode">您的邀请码为：</string>
    <string name="copy_success">复制成功</string>
    <string name="nideyaoq">您的邀请码</string>
    <string name="qsyb">轻松一步 扫码邀好友</string>
    <string name="copy_code">复制邀请码</string>
    <string name="zybzj">占用保证金</string>
    <string name="chicang">持仓</string>
    <string name="sckc">市场开仓</string>
    <string name="ydqzyjgxs">以当前最优价格交易</string>
    <string name="marukaiduo">买入开多</string>
    <string name="maichukk">卖出开空</string>
    <string name="zchz">资产划转</string>
    <string name="dqwt">当前委托</string>
    <string name="accomplish">已成交</string>
    <string name="cancle">已取消</string>
    <string name="katime">开仓时间</string>
    <string name="close_time">平仓时间</string>
    <string name="input_bzj">请选择保证金</string>
    <string name="input_leave">请选择杠杆倍数</string>
    <string name="duocang">多仓</string>
    <string name="input_price">请输入价格</string>
    <string name="xianjiakacang">限价开仓</string>
    <string name="kekai">可开==张</string>
    <string name="input_biname">请输入币种名称</string>
    <string name="zyx">止盈线</string>
    <string name="zxs">止损线</string>
    <string name="pc">平仓</string>
    <string name="yksz">盈亏设置</string>
    <string name="kcjg">开仓价格(USDT)</string>
    <string name="bj">本金(USDT)</string>
    <string name="fdyk">浮动盈亏</string>
    <string name="dw">点位</string>
    <string name="hy">合约</string>
    <string name="djbzj">冻结保证金</string>
    <string name="yxhy">永续合约</string>
    <string name="text_ytj">该币种已经添加</string>
    <string name="see">设置成功</string>
</resources>
