<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".mine.activiity.ShimingActivity">


    <include layout="@layout/public_title_bar"/>

    <TextView
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bi_type"
        android:textColor="#ff333333"
        android:textSize="15sp"
        />

    <RelativeLayout
        android:id="@+id/re_bitype"
        android:layout_marginTop="@dimen/sp_12"
        android:background="@drawable/grayback_radio10"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <TextView
            android:layout_marginStart="@dimen/sp_12"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_bi"
            android:textColor="#ff666666"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/sanjiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>
    <TextView
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address1"
        android:textColor="#ff333333"
        android:textSize="15sp"
        />
    <EditText
        android:id="@+id/edit_address"
        android:textColorHint="#ff666666"
        android:paddingStart="@dimen/sp_12"
        android:hint="@string/input_address"
        android:textSize="@dimen/sp_14"
        android:background="@drawable/grayback_radio10"
        android:layout_marginTop="@dimen/sp_12"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beizhu"
        android:textColor="#ff333333"
        android:textSize="15sp"
        />

    <EditText
        android:id="@+id/edit_cardnumber"
        android:textColorHint="#ff666666"
        android:paddingStart="@dimen/sp_12"
        android:hint="@string/input_beizhu"
        android:textSize="@dimen/sp_14"
        android:background="@drawable/grayback_radio10"
        android:layout_marginTop="@dimen/sp_12"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50" />

    <TextView
        android:id="@+id/next_do"
        android:background="@drawable/yellowback_radio10"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_260"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_height="@dimen/dp_45"
        android:text="@string/add"
        android:textColor="#ffffffff"
        android:textSize="@dimen/sp_15"
        />

</LinearLayout>