<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".mine.activiity.ShimingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/public_title_bar"/>

        <TextView
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel_phone"
            android:textColor="#ff333333"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/edit_phone"
            android:textColorHint="#ff666666"
            android:paddingStart="@dimen/sp_12"
            android:hint="@string/input_telphone"
            android:textSize="@dimen/sp_14"
            android:background="@drawable/grayback_radio10"
            android:layout_marginTop="@dimen/sp_12"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="#ff333333"
            android:textSize="15sp"
            />

        <RelativeLayout
            android:layout_marginTop="@dimen/sp_12"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50">
            <EditText
                android:id="@+id/edit_name"
                android:textColorHint="#ff666666"
                android:paddingStart="@dimen/sp_12"
                android:hint="@string/input_phone_code"
                android:textSize="@dimen/sp_14"
                android:background="@drawable/grayback_radio10"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/getcode"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/yellow_radio20"
                android:gravity="center"
                android:padding="@dimen/dp_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_code"
                android:textColor="#ff333333"
                android:textSize="12sp"
                />
        </RelativeLayout>


        <TextView
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#ff333333"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/edit_cardnumber"
            android:textColorHint="#ff666666"
            android:paddingStart="@dimen/sp_12"
            android:hint="@string/input_loginpwd"
            android:textSize="@dimen/sp_14"
            android:background="@drawable/grayback_radio10"
            android:layout_marginTop="@dimen/sp_12"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50" />

    </LinearLayout>

    <TextView
        android:id="@+id/next_do"
        android:background="@drawable/yellowback_radio10"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dp_230"
        android:layout_marginBottom="@dimen/dp_40"
        android:layout_height="@dimen/dp_45"
        android:text="@string/ok"
        android:textColor="#ffffffff"
        android:textSize="@dimen/sp_15"
        />

</RelativeLayout>