<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login.LoginActivity">


    <TextView
        android:id="@+id/welocome_login"
        android:layout_marginTop="@dimen/dp_80"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_login"
        android:textColor="#ff333333"
        android:textSize="24sp"
        />
    <ImageButton
        android:id="@+id/finish"
        android:layout_marginEnd="@dimen/dp_5"
        android:layout_alignParentEnd="true"
        android:src="@drawable/close"

        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_width="@dimen/dp_45"
        android:background="@null"
        android:layout_height="@dimen/dp_45" />

    <EditText
        android:inputType="phone"
        android:id="@+id/input_phone"
        android:hint="@string/input_telphone"
        android:textColorHint="@color/transparent_db"
        android:textColor="#999999"
        android:layout_marginTop="@dimen/dp_120"
        android:textCursorDrawable="@drawable/edittext_guangbiao"
        android:layout_below="@+id/welocome_login"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60" />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/input_psw"
        android:hint="@string/input_pws"
        android:textColorHint="@color/transparent_db"
        android:textColor="#ff999999"
        android:layout_marginTop="@dimen/dp_20"
        android:textCursorDrawable="@drawable/edittext_guangbiao"
        android:layout_below="@+id/input_phone"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60" />

    <TextView
        android:id="@+id/next_do"
        android:background="@drawable/yellowback_radio10"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_below="@+id/input_psw"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_height="@dimen/dp_45"
        android:text="@string/login"
        android:textColor="#ff000000"
        android:textSize="@dimen/sp_15"
        />
    <TextView
        android:id="@+id/register"
        android:layout_below="@+id/next_do"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#ffffd31c"
        android:textSize="13sp"
        />
    <TextView
        android:id="@+id/forget_pwd"
        android:paddingEnd="@dimen/dp_15"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/next_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd"
        android:textColor="#ff666666"
        android:textSize="13sp"
        />
</RelativeLayout>