<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mine.activiity.UpdateloginpwdActivity">

    <include layout="@layout/public_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_15"
        android:orientation="vertical"
        android:background="@drawable/whiteback_radio10">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50">

            <TextView
                android:layout_marginStart="@dimen/dp_15"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_shoppwd"
                android:textColor="#ff333333"
                android:textSize="14sp"
                />
            <EditText
                android:layout_marginEnd="@dimen/dp_15"
                android:textSize="@dimen/sp_14"
                android:id="@+id/edit_oldpsd"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:hint="@string/input_oldshoppwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="#F7F8FA"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"/>
        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50">

            <TextView
                android:layout_marginStart="@dimen/dp_15"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_psd"
                android:textColor="#ff333333"
                android:textSize="14sp"
                />
            <EditText
                android:layout_marginEnd="@dimen/dp_15"
                android:textSize="@dimen/sp_14"
                android:id="@+id/edit_newpsd"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:hint="@string/input_new_shoppwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="#F7F8FA"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"/>
        </RelativeLayout>
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50">

            <TextView
                android:layout_marginStart="@dimen/dp_15"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_agin_psd"
                android:textColor="#ff333333"
                android:textSize="14sp"
                />
            <EditText
                android:layout_marginEnd="@dimen/dp_15"
                android:textSize="@dimen/sp_14"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:hint="@string/input_shoppwd_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="#F7F8FA"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/next_do"
        android:background="@drawable/yellowback_radio10"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_height="@dimen/dp_45"
        android:text="@string/update"
        android:textColor="#ffffffff"
        android:textSize="@dimen/sp_15"
        />
</LinearLayout>